--- a/gb/24/8/21/n14314843.md
+++ b/gb/24/8/21/n14314843.md
@@ -3,15 +3,14 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>被迫害胃全切除 民运领袖朱虞夫有信心看中共亡</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/08/id14314844-176777-600x400.png" />
-<h6>被中共迫害患绝症的民运创始人朱虞夫8月20日来到中国民主党纽约总部。（施萍／大纪元）
-</h6>
+<h6>被中共迫害患绝症的民运创始人朱虞夫8月20日来到中国民主党纽约总部。（施萍／大纪元）</h6>
 <hr>
 	<p>【大纪元2024年08月21日讯】（大纪元记者施萍纽约报导）由于在监狱中长年受到发霉米饭的腐蚀，以及暗无天日的精神折磨 ，大陆政治犯朱虞夫的胃早就癌变了。现在他的胃已经全部切除，每两小时需要直接给小肠营养和能量才能维持生命。但是来到自由的美国土地上后，朱虞夫感到心情舒畅，体力也感觉越发充沛。他自信：“我能活着看到中共灭亡！”</p>
 <figure id="14314845" aria-describedby="caption-14314845" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/08/id14314845-176778-450x352.png" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/08/id14314845-176778-450x352.png" alt="8月20日，大陆政治犯、中国民主党创始人之一朱虞夫（左二）来到纽约总部和中国民主党成员见面并合影留念。" width="500" /></a><figcaption id="caption-14314845" class="wp-caption-text">8月20日，大陆政治犯、中国民主党创始人之一朱虞夫（左二）来到纽约总部和中国民主党成员见面并合影留念。（施萍／大纪元）</figcaption></figure>
 <p>这是8月20日朱虞夫在中国民主党纽约总部说这番话的。他面前坐着的是慕名而来的民主党党员，其中很多是年轻人，他们专门来听民运前辈的反共历史。</p>
 <p>71岁的杭州人朱虞夫是中国民主党的创始人之一。从青少年时代起就对中共暴政嫉恶如仇，立志改变肆意践踏人权的社会，让每一个人都生活得有尊严。1998年6月25日趁美国总统克林顿访华的时机，他和几个同道在中共统治下的大陆申请成立中国民主党。后来他曾经三次入狱，在中共的监狱中煎熬了整整16年。</p>
 <p>由于他一直不“认罪伏法”，在三次监狱生涯中都被酷刑对待。特别是吃的发霉的米都是连饲料都不能做，甚至连工业用粮都不能用的东西，“我们就像小白鼠一样，他们喂你什么你就得吃什么，不吃就饿死了。”</p>
-<p>长此以往，他的胃癌变了，2023年底胃被全部切除。中共看他命不久矣，就破天荒放他出境到日本治病。</p>
+<p>长此以往，他的胃癌变了，2023年底胃被全部切除。中共看他命不久矣，也不需要花维稳费监控他了，就让他死在外面吧。朱虞夫这才得以去日本治病，最近辗转来到美国。</p>
 <p>中共监狱的蹂躏和折磨并没有灭掉朱虞夫的反共意志。在朱虞夫第一次刑满释放的时候他竟不想回家，他对监狱说：“我还是要进来的，我的‘犯罪工具’你没有收缴，因为我的‘犯罪工具’就是我嘴巴讲出来的，就是因为我讲话，我讲话就是犯罪。”</p>
 <p>朱虞夫说，“在国内大家都过着被奴役的生活，都是共产党的驯服工具，人人都像奴隶，什么自由都没有”，“共产党就是一直吃中国人民的血肉长大起来的。”</p>
 <p>当年商量成立中国民主党的时候，很多人认为，这不是把脑袋送到老虎嘴里面嘛。但朱虞夫主张还是要成立。他打个比喻，“我们和这头老虎关在一个笼子里面，它原来是靠吃我们而活，它现在眼睛闭在那里，你不知道他真睡着了还是假睡着了，我们现在要去推它一下。你要么把你的位置给我们腾一点出来，让我们的活动空间大一点；要么你干脆把我吃掉了，把我吃掉了，我们可以告诉世界：‘这个野兽还在吃人！’”</p>
@@ -20,37 +19,34 @@
 <p>朱虞夫对中国的未来充满信心，他相信中共已经到崩溃的边缘。</p>
 <p>“我有信心看到中共崩溃的那一天！”他说，“我相信正义的力量，相信国际社会的力量，我相信更多有良心的人、有才干的人能够为我们的民族加一把劲，出一把力。对此我充满信心，我一定能活着看到那一天！”</p>
 <p>责任编辑：郑桦</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/9/n14091206.md#1">民运界纽约举办“中国变局及应对”研讨会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/12/n14115054.md#1">民运人士商议“结束中共暴政” 美议员力挺</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288056.md#1">民运人士被纽约中领馆保安袭击 头部受伤 民运团体谴责</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/21/n14314849.md#1">打击突袭女性犯罪 纽约市长主张预防精神病患作案</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/11/4/n11631409.md#1" target="_blank">正元：中共匪帮非我中华之邦</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/2/n11494502.md#1" target="_blank">探寻东方养生道 希腊青年在修炼中得到升华</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/1/n11760806.md#1" target="_blank">为中共效力的红色特工 后来怎么样了（3）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/16/n11726202.md#1" target="_blank">心灵升华 屏东法轮功学员见证大法美好</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/16/n14312505.md#1">【美国牧师濒死 惊见撒旦控制人类计划】</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309769.md#1">【未解之谜】震惊泰国的当代现世报：无法逃脱的业力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309782.md#1">另外空间的鬼有没有轮回？鬼能自救吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/15/n14311467.md#1">巴西空难前一天 灵媒直播预言：我看到坠机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302523.md#1">【古道人生】修佛后他足跛眼盲被雷击死 这是佛无灵吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313324.md#1">【时事军事】库尔斯克攻势无停止迹象 乌军将获最远程导弹</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14313073.md#1">【新闻大破解】美FED慢半拍升息 美股恐慌结束？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14312955.md#1">【天亮时分】纽时攻击神韵 谎言背叛与黑幕</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/16/n14312233.md#1">狗狗健身房里模仿主人做深蹲 视频火遍全网</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14312853.md#1">中共总理李强开会 国防部长董军尴尬台下坐</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14312918.md#1">厦门大学发“接管台湾”预案 遭全文删除</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14313092.md#1">同步晒礼服和戒指 赵丽颖被传与冯绍峰复合？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/16/n14312608.md#1">关晓彤饰贾元春 新《红楼梦》9小时票房仅90万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14313104.md#1">韩星2024年剧酬排名曝光 金秀贤居冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14312668.md#1">《死侍与金钢狼》全球票房破10亿 再创新纪录</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14313061.md#1">徐峥回应新片消费苦难：没看电影直接喷不公平</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309722.md#1">学会这个技巧 你可以煎太阳蛋、流心蛋、溏心蛋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/14/n14311371.md#1">乐龄族必吃六类食物 增肌减脂、维持认知力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/15/n14312095.md#1">日本专家：年过六十 小心五种错误保健方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/16/n14312462.md#1">新研究：间歇性禁食优于糖尿病药物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313229.md#1">蔬果怎么洗才安全？ 微生物学家这么说</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/8/21/n14314843.htm">被迫害胃全切除 民运领袖朱虞夫有信心看中共亡</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/8/21/n14314843.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
