--- a/gb/24/8/23/n14316323.md
+++ b/gb/24/8/23/n14316323.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>不自由毋宁死 朱虞夫知患绝症后感解脱</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/08/id14316324-176826-600x400.png" />
-<h6>被中共关押16年的反共斗士朱虞夫身患绝症后才得以到达日本治病。（受访人提供）
-</h6>
+<h6>被中共关押16年的反共斗士朱虞夫身患绝症后才得以到达日本治病。（受访人提供）</h6>
 <hr>
 	<p>【大纪元2024年08月23日讯】（大纪元记者施萍纽约报导）如果生活是一种无尽的苦难，那么离开尘世就变成了解脱。这就是中国民主党创建人之一、民运领袖、反共斗士朱虞夫去年得知自己罹患癌症时的心情。</p>
 <p>2023年中共在杭州开亚运会，他们按照邪恶的惯例要把像朱虞夫这样的异己人士拉到城外去。这次朱虞夫跟着官员们去了西安，还爬了华山。等到10月8日亚运会结束回到杭州后，第二天早晨吃饭的时候，他就被白米稀饭给噎住了，他用水好不容易咽下去了。到了第二天、第三天还是连稀饭都噎住吃不下。他自己感觉胃肯定出问题了。</p>
@@ -15,7 +14,7 @@
 <p>“共产党连日本人都不如”，朱虞夫说，因为在日本侵略中国的8年中，没有破坏中国一处文物古迹，没有一个知识分子自杀，而且百姓还可以逃跑；共产党来了呢？中国人无处可逃，文革中中国的知识分子今天跳楼，明天服毒，后天又上吊了，中华大地上的所有文物全部被砸，在和平年代就死了数千万中国人??</p>
 <p>朱虞夫的胃切除手术做了11个小时，医生仔仔细细地把所有淋巴都摘掉了，之后他做了2次化疗，医生估计说只能再活3个月。在公安部一个副部长和国保总局的局长签字下，朱虞夫先到了日本，刚刚拖着残缺的身体来到了美国。</p>
 <p>踏上美国的土地，朱虞夫的心情不能用语言来表达。他说，美国的“先进政治制度、生产力和大气、包容的文化”决定了美国的强大，也让他看到了中共的末日就在眼前。虽然他身患重病，但他还是有信心活到中共灭亡的那一天。</p>
-<figure id="attachment_14316325" aria-describedby="caption-attachment-14316325" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14316325-176827.jpg"><img decoding="async" class="size-large wp-image-14316325" src="https://i.epochtimes.com/assets/uploads/2024/08/id14316325-176827-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14316325" class="wp-caption-text">8月20日，不久前刚到美国的民运领袖朱虞夫到纽约中国民主党总部与大家见面。（施萍／大纪元）</figcaption></figure>
+<figure id="attachment_14316325" aria-describedby="caption-attachment-14316325" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14316325-176827.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14316325" src="https://i.epochtimes.com/assets/uploads/2024/08/id14316325-176827-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14316325" class="wp-caption-text">8月20日，不久前刚到美国的民运领袖朱虞夫到纽约中国民主党总部与大家见面。（施萍／大纪元）</figcaption></figure>
 <p>因为，朱虞夫看到了中华民族的未来和希望。这一次真的是“是时候了”。他在这首诗中写着：</p>
 <p>是时候了</p>
 <p>是时候了，中国人！是时候了</p>
@@ -25,42 +24,39 @@
 <p>歌曲是大家的</p>
 <p>喉是自己的</p>
 <p>是时候用喉唱出心底的歌曲；</p>
-<p>是时候了，中国人！是时候了</p>
 <p>中国是大家的</p>
 <p>选择是自己的</p>
 <p>是时候用自己选择未来的中国。</p>
-<p>&nbsp;</p>
+<p>?</p>
 <p>责任编辑：陈玟绮</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/23/n10421536.md#1">魔鬼在统治着我们的世界(6)：输出革命</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/25/n13788937.md#1">【新闻看点】唐山事件有消息 有人要被关笼子？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/8/n13797993.md#1">EndCCP车游抵盐湖城 受犹他州众议员欢迎</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/4/n13878279.md#1">纽约华人集会声援白纸革命 高喊“共产党下台”</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/7/n10283458.md#1" target="_blank">李庆霖“知青英雄”悲剧是如何造成的(上)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/11/n11583320.md#1" target="_blank">“法轮大法像尘世中的钻石 无比珍贵”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/20/n10158455.md#1" target="_blank">林辉：为何“六九届”学生少有成功人士？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/10/30/n4283873.md#1" target="_blank">方林达：法轮功参与政治了吗？</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/16/n14312505.md#1">【未解之谜】美国牧师濒死 惊见撒旦控制人类计划</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309782.md#1">另外空间的鬼有没有轮回？鬼能自救吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/15/n14311467.md#1">巴西空难前一天 灵媒直播预言：我看到坠机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308151.md#1">香港凉茶趣谈：凉茶不“凉” 龟苓膏最初功用非“清热解毒”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302523.md#1">【古道人生】修佛后他足跛眼盲被雷击死 这是佛无灵吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313580.md#1">【环球直击】研究：TikTok被曝宣扬中共 压制异议声音</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14313062.md#1">【中国禁闻】北京211名校女毕业生饿死出租屋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313813.md#1">【未解之谜】CIA心灵部队（1）神秘人带来的特殊任务</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/16/n14312190.md#1">在战斗中“踹门” 为何F-22是世上最昂贵战机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313241.md#1">消息：中共在暂停黄金储备后将恢复进口</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14313092.md#1">同步晒礼服和戒指 赵丽颖被传与冯绍峰复合？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14313104.md#1">韩星2024年剧酬排名曝光 金秀贤居冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313950.md#1">进军大银幕票房翻车 张若昀被劝回去拍剧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14313061.md#1">徐峥回应新片消费苦难：没看电影直接喷不公平</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14312823.md#1">《当我们盟在一起》影评：建筑工人也能转型当间谍</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/14/n14311371.md#1">乐龄族必吃六类食物 增肌减脂、维持认知力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/15/n14312095.md#1">日本专家：年过六十 小心五种错误保健方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/16/n14312462.md#1">新研究：间歇性禁食优于糖尿病药物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313229.md#1">蔬果怎么洗才安全？ 微生物学家这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313638.md#1">除了东京之外 日本这6个地方也值得一游</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/8/23/n14316323.htm">不自由毋宁死 朱虞夫知患绝症后感解脱</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/8/23/n14316323.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
